fixed spacing to be responsive

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,6 @@
 .attractions img {
     width: 700px;
     max-width: 100%;
-    padding-bottom: 3vw;
 }
 
 .attractions h3 {
